--- a/web/styles/_theme.scss
+++ b/web/styles/_theme.scss
@@ -25,6 +25,8 @@
   /* hyperlinks*/
   --main-hyperlinks-color: #0175C2;
 
+  --search-icon-url: url("./search.svg");
+
   --main-inset-bgColor: #f5f5f7;
   --main-inset-borderColor: #dadce0;
 
@@ -73,6 +75,8 @@
   --main-footer-background: #27323a;
   /* hyperlinks*/
   --main-hyperlinks-color: #00D2FA;
+
+  --search-icon-url: url("./search_dark.svg");
 
   --main-inset-bgColor: #242b32;
   --main-inset-borderColor: #676f7e;
